<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:scrollbars="none">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="@dimen/page_padding">

			<Button
				android:id="@+id/go_core_kit_btn"
				android:layout_width="match_parent"
				android:layout_height="@dimen/btn_height"
				android:text="@string/core_kit_test"
				android:textAllCaps="false"/>

			<Button
				android:id="@+id/go_account_kit_btn"
				android:layout_width="match_parent"
				android:layout_height="@dimen/btn_height"
				android:layout_marginTop="@dimen/top_margin"
				android:text="@string/account_kit_test"
				android:textAllCaps="false"/>

			<Button
				android:id="@+id/go_message_kit_btn"
				android:layout_width="match_parent"
				android:layout_height="@dimen/btn_height"
				android:layout_marginTop="@dimen/top_margin"
				android:text="@string/message_kit_test"
				android:textAllCaps="false"/>

			<Button
				android:id="@+id/go_wallet_kit_btn"
				android:layout_width="match_parent"
				android:layout_height="@dimen/btn_height"
				android:layout_marginTop="@dimen/top_margin"
				android:text="@string/wallet_kit_test"
				android:textAllCaps="false"/>

		</LinearLayout>


	</ScrollView>


</LinearLayout>
