<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/page_padding">

            <Button
                android:id="@+id/query_list_blocks_data_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:background="@drawable/btn_bg"
                android:text="@string/query_list_blocks_data"
                android:textAllCaps="false"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/query_blocks_by_height_eth_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/top_margin"
                android:background="@drawable/btn_bg"
                android:text="@string/query_list_block_eth_data"
                android:textAllCaps="false"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/query_richest_accounts_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/top_margin"
                android:background="@drawable/btn_bg"
                android:text="@string/query_richest_account_data"
                android:textAllCaps="false"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/query_pizza_transaction_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/top_margin"
                android:background="@drawable/btn_bg"
                android:text="@string/query_pizza_transaction"
                android:textAllCaps="false"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/multi_query_in_one_page_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/top_margin"
                android:background="@drawable/btn_bg"
                android:text="@string/multi_query_in_one_page"
                android:textAllCaps="false"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/eth_new_block_subscription_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/top_margin"
                android:background="@drawable/btn_bg"
                android:text="@string/eth_new_block_subscription"
                android:textAllCaps="false"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/eth_new_block_subscription_in_main_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/top_margin"
                android:background="@drawable/btn_bg"
                android:text="@string/eth_new_block_in_main_subscription"
                android:textAllCaps="false"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/support_hmac_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:layout_marginTop="@dimen/top_margin"
                android:background="@drawable/btn_bg"
                android:text="Support HMAC"
                android:textAllCaps="false"
                android:textColor="@android:color/white"/>


        </LinearLayout>


    </ScrollView>

</LinearLayout>